--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,10 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
+		"module": "CommonJS",
+		"target": "ES2018",
 		"checkJs": true,  /* Typecheck .js files. */
 		"lib": [
-			"ES2022"
+			"ES2018"
 		]
 	},
 	"exclude": [
